fix bottom whitespace

--- a/app/assets/stylesheets/whatever_chats.scss
+++ b/app/assets/stylesheets/whatever_chats.scss
@@ -36,9 +36,9 @@
   align-items: center;
   -webkit-box-pack: center;
   justify-content: flex-start;
-  padding-bottom: 40px;
   background-color: #f5f5f5;
   max-width: 1200px;
+  overflow: hidden
 }
 
 .chat-backdrop {
@@ -53,8 +53,8 @@
   align-items: center;
   -webkit-box-pack: center;
   justify-content: flex-start;
-  padding-bottom: 40px;
   background-color: #f5f5f5;
+  overflow: hidden
 }
 
 
